fix: don't loose information on smaller screens

--- a/assets/styles/theme.css
+++ b/assets/styles/theme.css
@@ -46,6 +46,10 @@
     initial-value: #a6afc366;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     font-family: 'Inter';
     color: var(--color-primary-darkest);
